[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/object/LevelUpPanel.gd" type="Script" id=1]
[ext_resource path="res://font/font_siteName.tres" type="DynamicFont" id=2]
[ext_resource path="res://scene/object/RoleListUI.gd" type="Script" id=3]
[ext_resource path="res://scene/object/RoleView.tscn" type="PackedScene" id=4]
[ext_resource path="res://theme/theme_skillButton.tres" type="Theme" id=5]
[ext_resource path="res://font/font_uiState.tres" type="DynamicFont" id=6]
[ext_resource path="res://scene/object/RoleLevelPanel.tscn" type="PackedScene" id=7]

[node name="LevelUpPanel" type="Panel"]
self_modulate = Color( 0.352941, 0.423529, 0.447059, 0.839216 )
margin_left = 197.0
margin_top = 37.0
margin_right = 1059.0
margin_bottom = 643.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 271.0
margin_top = 27.0
margin_right = 610.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "升级一名角色（最多升到3级）"

[node name="Label2" type="Label" parent="."]
margin_left = 378.0
margin_top = 344.0
margin_right = 448.0
margin_bottom = 369.0
custom_fonts/font = ExtResource( 2 )
text = ">>>>>"

[node name="RoleListUI" type="Control" parent="."]
margin_left = 137.0
margin_top = 80.0
margin_right = 177.0
margin_bottom = 120.0
rect_min_size = Vector2( 40, 40 )
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="RoleListUI"]
margin_left = -103.0
margin_right = 673.0
margin_bottom = 127.0

[node name="rolePlace" type="HBoxContainer" parent="RoleListUI/ScrollContainer"]
editor/display_folded = true
margin_right = 1364.0
margin_bottom = 110.0

[node name="RoleView" parent="RoleListUI/ScrollContainer/rolePlace" instance=ExtResource( 4 )]

[node name="Button5" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 114.0
margin_right = 224.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button5"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button5"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button5"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button6" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 228.0
margin_right = 338.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button6"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button6"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button6"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button7" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 342.0
margin_right = 452.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button7"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button7"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button7"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button8" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 456.0
margin_right = 566.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button8"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button8"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button8"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button9" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 570.0
margin_right = 680.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button9"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button9"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button9"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button10" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 684.0
margin_right = 794.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button10"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button10"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button10"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button11" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 798.0
margin_right = 908.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button11"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button11"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button11"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button12" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 912.0
margin_right = 1022.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button12"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button12"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button12"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button13" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 1026.0
margin_right = 1136.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button13"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button13"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button13"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button14" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 1140.0
margin_right = 1250.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button14"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button14"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button14"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button15" type="Button" parent="RoleListUI/ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 1254.0
margin_right = 1364.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button15"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button15"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="RoleListUI/ScrollContainer/rolePlace/Button15"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="confirmButton" type="Button" parent="."]
margin_left = 354.0
margin_top = 534.0
margin_right = 468.0
margin_bottom = 586.0
custom_fonts/font = ExtResource( 2 )
text = "确定"

[node name="jumpButton" type="Button" parent="."]
margin_left = 728.0
margin_top = 15.0
margin_right = 842.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "跳过"

[node name="roleLevelPanel1" parent="." instance=ExtResource( 7 )]
margin_left = 32.0
margin_top = 222.0
margin_right = 339.0
margin_bottom = 539.0

[node name="roleLevelPanel2" parent="." instance=ExtResource( 7 )]
margin_left = 501.0
margin_top = 222.0
margin_right = 808.0
margin_bottom = 539.0

